# testia001

./: .env_ejemplo  .gitignore  README.md  app.py  app_new.py  app_old.py  applocal.py  consulta.py  page.py  pyproject.toml
