[tool.poetry]
name = "testia"
version = "0.0.1"
description = "Scripts de prueba de IA"
authors = ["Manuel Borja <sistemas@arzobispadodelima.org>"]
license = "Open"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
requests = "^2.32.3"
protobuf = "<=3.20.1"
langchain-community = "^0.2.7"
langchain-openai = "^0.1.15"
pypdf = "^4.2.0"
langchain-chroma = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
